--- a/app/globals.css
+++ b/app/globals.css
@@ -25,8 +25,15 @@ div, p{
 
 .slick-slide > div {
   margin: 0 10px;
+  padding: 10px 0;
+}
+
+.slick-next {
+  right: -10px !important;
 }
 
 .slick-prev:before, .slick-next:before {
   color: #18181b !important;
 }
+
+
