--- a/app/globals.css
+++ b/app/globals.css
@@ -38,6 +38,14 @@ div, p{
   color: #18181b !important;
 }
 
+@layer base {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
+
 
 
 
